fix spacing for tech items

--- a/css/site.css
+++ b/css/site.css
@@ -36,10 +36,21 @@ ul.tech-used {
   list-style: none !important;
 }
 
+ul.tech-used:before,
+ul.tech-used:after {
+  content:"";
+  display:table;
+}
+ul.tech-used:after {
+  clear:both;
+}
+
 ul.tech-used li {
   display: inline-block;
   background-color: rgba(0,0,0,.2);
   padding: 2px 5px;
+  float: left;
+  margin-right: 4px;
 }
 
 #hero {
@@ -67,7 +78,6 @@ span {
 
 @media(max-width:767px) {
   ul.tech-used li {
-    display: inline-block;
     padding: 0;
     background-color: transparent;
   }
